--- a/texter/package.json
+++ b/texter/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^6.22.0",
+    "@tanstack/react-query": "^5.17.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
